--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -1,1 +1,690 @@
 
+:root {
+    --clr-light: #eeeeee;
+    --clr-orange: #ee8a1d;
+    --clr-gray: #ededed;
+    --clr-text-color-1: #373737;
+    --clr-text-color-2: #505050;
+    --clr-text-color-3: #ededed;
+}
+
+
+.padding-tb-50 {
+    padding: 50px 0px;
+}
+
+.padding-tb-75 {
+    padding: 75px 0px;
+}
+
+.padding-lf-8 {
+    padding: 0 8%;
+}
+
+
+.background-light {
+    background: var(--clr-light);
+}
+
+.background-light {
+    background: var(--clr-text-color-3);
+}
+
+.background-dark {
+    background: var(--clr-text-color-1);
+}
+
+.heading-dark {
+    color: #505050;
+    font-size: 43px;
+    font-weight: 700
+}
+
+.para-1 {
+    font-size: 20px;
+    color: var(--clr-text-color-2)
+}
+
+.btn-orange {
+    background: var(--clr-orange);
+    border-radius: 16px;
+    border: 1px solid;
+    padding: 12px 30px;
+    color: white;
+    font-size: 20px;
+    transition-duration: 0.4s;
+}
+
+.btn-orange:hover {
+    background: transparent;
+    color: var(--clr-orange);
+    border: 1px solid var(--clr-orange);
+    
+}
+
+.btn-gray {
+    background: #999;
+    border-radius: 16px;
+    border: 1px solid #d9d9d9;
+    padding: 12px 30px;
+    color: #fff;
+    font-size: 20px;
+    transition-duration: 0.4s;
+}
+
+.btn-gray:hover {
+        background: transparent;
+        color: #333;
+        border: 1px solid #999;
+    
+    
+    }
+
+.h3-orange {
+    color: var(--clr-orange);
+    font-size: 71px;
+    font-weight: 700;
+}
+
+.clr-orange {
+    color: var(--clr-orange);
+}
+
+.clr-text-color-1 {
+    color: var(--clr-text-color-1);
+}
+
+.clr-text-color-2 {
+    color: var(--clr-text-color-2);
+}
+
+
+
+#people-search-api-hero {
+    background: url("/images/psabg.png") no-repeat bottom;
+    background-size: cover
+}
+
+footer {
+    
+    background: #505050
+}
+
+nav {
+    font-size: 20px;
+    padding: 30px
+}
+#psa-nav-bar {
+    gap: 54px;
+    list-style: none;
+    font-weight: 600;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+#psa-property-records img,
+#psa-find-email-address img,
+#psa-find-name-address img,
+#psa-find-phone-number img {
+    top: 85%;
+    width: 120px;
+    position: absolute;
+    transform: translate(-50%, -50%) !important;
+    left: 100% !important;
+}
+
+nav #searchbug-logo {
+    width: 175px;
+}
+
+nav #user-icon {
+    width: 30px;
+    margin-right: 12px
+}
+
+.searchbug-balance {
+    color: var(--clr-orange);
+    font-weight: bold;
+    margin-left: 12px
+}
+
+.balance-margin {
+    margin: 0 12px;
+    font-weight: bold
+}
+
+#people-search-api-hero h1, #advance-person-search h2, #batch-append-tools h2 {
+    font-size: 46px;
+    font-weight: 700
+}
+
+#people-search-api-hero h2, #advance-person-search h3, #batch-append-tools h3 {
+    font-size: 71px;
+    font-weight: 700
+}
+
+#psa-faq {
+    background: #FFF9F6;
+}
+
+#psa-faq a {
+    color: var(--clr-orange);
+    text-decoration: none;
+    font-weight: 600
+    }
+
+#psa-faq a:hover {
+    text-decoration: underline;
+}
+
+#psa-faq h2 {
+    font-size: 41px;
+    font-weight: 700
+}
+
+#psa-faq > .container > div {
+    border: 2px solid var(--clr-orange);
+    padding: 50px 60px;
+    border-radius: 12px;
+}
+
+#psa-faq li {
+    font-size: 20px;
+    color: var(--clr-text-color-2)
+}
+
+#psa-faq .hr-line{
+    background: var(--clr-orange);
+    height: 4px
+}
+
+
+
+#psa-faq ul li {
+    list-style-image: url('/images/arrow-icon.png');
+    margin: 12px 0
+}
+
+
+#batch-append-tools #bat-img {
+    width: 444px
+}
+
+
+#psa-estimate-cost th {
+    background: var(--clr-orange);
+    color: #fff;
+    border: 5px solid #fff;
+    padding: 16px;
+    font-size: 20px;
+}
+
+#psa-estimate-cost td {
+    background: #FFF4E2 !important;
+    color: #000;
+    padding: 16px;
+    border: 5px solid #fff;
+    font-size: 20px;
+}
+
+
+#psa-estimate-cost {
+    
+    background: linear-gradient(180deg, rgba(132,132,132,1) 0%, rgba(157,153,153,1) 100%);
+    color: #fff
+}
+
+
+#psa-estimate-cost h2 {
+    font-size: 46px;    
+}
+
+#psa-estimate-cost table {
+    margin: 0 auto;
+    width: 100%;
+    
+}
+
+#psa-estimate-cost label {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#psa-estimate-cost a {
+    color: #fff;
+    font-size: 20px;
+    text-decoration: none
+}
+
+#psa-estimate-cost span {
+        color: #fff;
+        font-size: 20px;
+        font-weight: bold
+    }
+
+.psa-estimate-btn {
+    color: #fff;
+    background: transparent;
+    font-size: 20px;
+    border: 2px solid #fff;
+    padding: 9px 21px;
+}
+
+    #psa-estimate-cost input[type="text"] {
+        font-size: 20px;
+        border: 2px solid #fff;
+        padding: 9px 21px;
+        width: 60%;
+        margin: 0 30px;
+    }
+
+#psa-estimate-cost p {
+    font-size: 20px;
+}
+
+#psa-estimate-cost > div > div
+{
+    margin: 0 16px;
+}
+
+#psa-card-carousel img {
+    width: 90px;
+
+}
+
+#psa-card-carousel h2 {
+    font-size: 16px;
+}
+
+#psa-card-carousel .card {
+    border: none !important
+}
+
+#psa-card-carousel button {
+    background: transparent;
+    border: none;
+    color: var(--clr-orange);
+    font-weight: bold
+}
+
+#psa-card-carousel {
+    background: #EDEDED
+}
+
+#psa-card-carousel .card {
+    border-radius: 16px;
+    
+}
+
+#psa-card-carousel p {
+     line-height: 1.3;
+}
+
+#psa-card-carousel a {
+        color: var(--clr-orange);
+        font-size: 20px;
+        font-weight: bold;
+        transition: 0.3s
+}
+
+.arrow-icon {
+    transition: all 0.3s linear;
+}
+
+#psa-card-carousel a:hover .arrow-icon {
+    transform: translateX(10px)
+}
+
+#psa-card-carousel a > img {
+        width: 16px
+}
+
+.psa-xml-json {
+    margin: 0 30px;
+       
+}
+
+
+#psa-aps-bat h2 {
+    color: #505050;
+    font-size: 26px;
+    font-weight: 700
+}
+
+
+#psa-aps-bat h3 {
+    color: var(--clr-orange);
+    font-size: 40px;
+    font-weight: 700
+}
+
+
+
+
+#ao-brand-customer-partners .brand-customers-partner-img {
+    width: 200px;
+    margin: 0 auto;
+
+}
+
+#ao-brand-customer-partners h2 {
+    font-size: 42px;
+    color: #373737;
+    font-weight: 700;
+}
+
+#ao-brand-customer-partners span {
+    font-size: 42px;
+    color: var(--clr-orange);
+    font-weight: 700
+}
+
+
+#psa-find-phone-number > .container > div,
+#psa-find-name-address > .container > div,
+#psa-find-email-address > .container > div,
+#psa-property-records > .container > div{
+    background: var(--clr-gray);
+    border-radius: 16px
+}
+
+
+.container.psa-cta > div {
+    background: #fff;
+    border-radius: 16px;
+    border: 2px solid var(--clr-orange);
+    padding: 20px 10px;
+    
+}
+
+.container.psa-cta h2 {
+    color: var(--clr-orange);
+    font-size: 26px !important;
+    font-weight: 700
+}
+
+.container.psa-cta h3 {
+    
+    font-size: 34px !important;
+    font-weight: 700
+}
+
+
+#psa-estimate-cost input[type = "radio"] {
+    display: none
+}
+
+
+#psa-estimate-cost label {
+    position: relative;
+    padding: 12px;    
+    border-radius: 12px;
+    display: flex;
+    cursor: pointer;
+    transition-duration: 0.3s
+}
+
+#psa-estimate-cost label:before {
+    content: "";
+    height: 7px;
+    width: 7px;
+    padding: 12px;
+    border-radius: 50% !important;
+    margin-right: 20px;
+    background: #fff;
+    border-radius: 12px;
+}
+
+
+#psa-estimate-cost input[type = "radio"]:checked + label {
+    background: var(--clr-orange);
+}
+
+
+/* Maximalist API Overview Page */
+
+
+#ao-features-benefits img {
+    height: 160px;
+}
+
+#ao-features-benefits {
+    color: #fff
+}
+
+
+#ao-features-benefits h2 {
+    font-size: 42px;
+    font-weight: 700
+}
+
+
+#ao-features-benefits h3 {
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+    margin-top: 16px;
+}
+
+#ao-features-benefits span {
+    color: var(--clr-orange)
+}
+
+#ao-use-batch-append-tool h2 {
+    font-size: 42px;
+    font-weight: 700;
+    color: #505050
+}
+
+#ao-use-batch-append-tool h3 {
+    font-size: 52px;
+    font-weight: 700;
+    color: var(--clr-orange)
+}
+
+#ao-card-carousel img {
+    width: 90px;
+}
+
+#ao-card-carousel h5.card-title {
+    color: #505050;
+    font-size: 26px;
+    font-weight: 700
+}
+
+#ao-card-carousel h2 {
+    font-size: 16px;
+}
+
+#ao-card-carousel .card {
+    border: none !important
+}
+
+#ao-card-carousel button {
+    background: transparent;
+    border: none;
+    color: var(--clr-orange);
+    font-weight: bold
+}
+
+#ao-card-carousel {
+    background: #EDEDED
+}
+
+#ao-card-carousel .card {
+    border-radius: 16px;
+}
+
+#ao-card-carousel p {
+    line-height: 1.3;
+}
+
+#ao-card-carousel a {
+    color: var(--clr-orange);
+    font-size: 16px;
+    font-weight: bold;
+    transition: 0.3s
+}
+
+#ao-card-carousel a:hover .arrow-icon {
+    transform: translateX(10px)
+}
+
+#ao-card-carousel a > img {
+    width: 16px
+}
+
+#ao-use-batch-append-tool img {
+    width: 190px;
+}
+
+#ao-call-to-action h2 {
+    font-size: 73px;
+    font-weight: 700;
+    color: var(--clr-orange);
+}
+
+#ao-call-to-action h3 {
+    font-size: 26px;
+    color: #373737
+}
+
+#ao-watch-videos h2 {
+    font-size: 42px;
+    font-weight: 700;
+    color: #505050
+}
+
+#ao-watch-videos #img-watch-videos {
+    width: 450px;
+}
+
+#ao-watch-videos span {
+    color: var(--clr-orange);
+}
+
+#ao-watch-videos #ao-youtube-play-icon {
+    width: 200px
+}
+
+
+#pv-pricing {
+    background: var(--clr-orange);
+}
+
+#pv-get-information h2 {
+    font-weight: 700;
+    font-size: 42px;
+    color: #505050;
+}
+
+#pv-get-information h3 {    
+    font-size: 26px;
+    color: #505050;
+}
+
+#pv-get-information span{
+    color: var(--clr-orange);
+}
+
+
+#pv-get-information img {
+    width: 260px
+}
+
+#pv-trusted-by-companies {
+    font-weight: 700;
+    font-size: 42px;
+    color: #505050;
+}
+
+#pv-phone-validator h2 {
+    font-size: 73px;
+    font-weight: 700;
+    color: var(--clr-orange);
+}
+
+#pv-phone-validator h3 {
+    font-size: 73px;
+    color: #505050;
+    font-weight: 700;
+}
+#pv-advanced-pricing-list li {
+    list-style-image: url(/images/orange-check-icon.png);
+}
+
+#pv-advanceddnc-pricing-list li, #pv-basic-pricing-list li, #pv-complete-pricing-list li {
+    list-style-image: url(/images/green-check-icon.png);
+}
+
+.container.position-relative {
+    position: relative;
+}
+
+@media (max-width: 576px) {
+    #people-search-api-hero h1 {
+        font-size: 26px;
+        text-align: left
+    }
+
+    #people-search-api-hero h2 {
+        font-size: 42px;
+        text-align: left
+    }
+
+    #people-search-api-hero p {
+        font-size: 18px;
+        text-align: left
+    }
+
+    #psa-aps-bat h3 {
+        font-size: 30px;
+    }
+
+    button.btn-orange, button.btn-gray {
+        font-size: 16px;
+    }
+
+    .col-md.psa-bat {
+        margin-top: 50px;
+    }
+
+    .heading-dark {
+        font-size: 30px;
+    }
+
+    #psa-faq h2 {
+        font-size: 25px;
+    }
+
+    #psa-property-records p, #psa-find-email-address p, #psa-find-name-address p, #psa-find-phone-number p, #psa-faq li {
+        font-size: 16px;
+    }
+
+    #psa-property-records img,
+    #psa-find-email-address img,
+    #psa-find-name-address img,
+    #psa-find-phone-number img {
+        top: 0%;
+        width: 120px;
+        left: 86% !important;
+            position: absolute;
+    transform: translate(-50%, -50%) !important;
+    }
+
+    .psa-cta {
+        display: none
+    }
+
+    
+}
+
+@media (max-width: 991px) {
+    .cost-estimate-form {
+        padding-bottom: 0px !important;
+    }
+
+    #ao-use-batch-append-tool .container {
+        flex-direction: column;
+    }
+}
