--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -53,6 +53,7 @@
     color: white;
     font-size: 20px;
     transition-duration: 0.4s;
+    cursor: pointer;
 }
 
 .btn-orange:hover {
@@ -70,6 +71,7 @@
     color: #fff;
     font-size: 20px;
     transition-duration: 0.4s;
+    cursor: pointer
 }
 
 .btn-gray:hover {
