--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -562,6 +562,11 @@ nav #user-icon {
     color: #373737
 }
 
+#ao-watch-videos .row.orange-border {
+    border: 2px solid orange;
+    border-radius: 30px;
+}
+
 #ao-watch-videos h2 {
     font-size: 42px;
     font-weight: 700;
