--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -1,4 +1,3 @@
-
 :root {
     --clr-light: #eeeeee;
     --clr-orange: #ee8a1d;
@@ -53,7 +52,6 @@
     color: white;
     font-size: 20px;
     transition-duration: 0.4s;
-    cursor: pointer;
 }
 
 .btn-orange:hover {
@@ -71,7 +69,6 @@
     color: #fff;
     font-size: 20px;
     transition-duration: 0.4s;
-    cursor: pointer
 }
 
 .btn-gray:hover {
@@ -81,6 +78,25 @@
     
     
     }
+
+
+.btn-white {
+    background: #fff;
+    border-radius: 16px;
+    border: 1px solid #d9d9d9;
+    padding: 12px 30px;
+    color: var(--clr-orange);
+    font-size: 20px;
+    transition-duration: 0.4s;
+}
+
+    .btn-white:hover {
+        background: var(--clr-orange);
+        color: #fff;
+        border: 1px solid #999;
+    }
+
+
 
 .h3-orange {
     color: var(--clr-orange);
@@ -130,9 +146,6 @@ nav {
 #psa-find-phone-number img {
     top: 85%;
     width: 120px;
-    position: absolute;
-    transform: translate(-50%, -50%) !important;
-    left: 100% !important;
 }
 
 nav #searchbug-logo {
@@ -362,7 +375,6 @@ nav #user-icon {
 
 
 
-
 #ao-brand-customer-partners .brand-customers-partner-img {
     width: 200px;
     margin: 0 auto;
@@ -484,6 +496,12 @@ nav #user-icon {
     color: var(--clr-orange)
 }
 
+#ao-card-carousel h5.card-title {
+    color: #505050;
+    font-size: 26px;
+    font-weight: 700
+}
+
 #ao-card-carousel img.imgleft {
     position: absolute;
     left: -760px;
@@ -497,12 +515,6 @@ nav #user-icon {
 #ao-card-carousel .container {
     overflow: hidden;
     position: relative
-}
-
-#ao-card-carousel h5.card-title {
-    color: #505050;
-    font-size: 26px;
-    font-weight: 700
 }
 
 #ao-card-carousel h2 {
@@ -525,8 +537,9 @@ nav #user-icon {
 }
 
 #ao-card-carousel .card {
-    border-radius: 16px;
-}
+        border-radius: 16px;
+        transform: scale(0.9, 0.9);
+    }
 
 #ao-card-carousel p {
     line-height: 1.3;
@@ -575,7 +588,7 @@ nav #user-icon {
 
 #ao-watch-videos #img-watch-videos {
     width: 450px;
-	 cursor: pointer
+    cursor: pointer
 }
 
 #ao-watch-videos span {
@@ -586,16 +599,173 @@ nav #user-icon {
     width: 200px
 }
 
+#pv-card-carousel img {
+    width: 90px;
 
+}
+
+#pv-card-carousel h2 {
+    font-size: 42px;
+    color: #505050;
+    font-weight: 700
+}
+
+    #pv-card-carousel h2 span {
+        color: var(--clr-orange);
+        
+    }
+
+    #pv-card-carousel .card {
+        border: none !important
+    }
+
+#pv-card-carousel button {
+    background: transparent;
+    border: none;
+    color: var(--clr-orange);
+    font-weight: bold
+}
+
+#pv-card-carousel {
+    background: #EDEDED
+}
+
+#pv-card-carousel .card {
+    border-radius: 16px;
+    
+}
+
+#pv-card-carousel p {
+     line-height: 1.3;
+}
+
+#pv-card-carousel a {
+        color: var(--clr-orange);
+        font-size: 20px;
+        font-weight: bold;
+        transition: 0.3s
+}
+
+.arrow-icon {
+    transition: all 0.3s linear;
+}
+
+#pv-card-carousel a:hover .arrow-icon {
+    transform: translateX(10px)
+}
+
+#pv-card-carousel a > img {
+        width: 16px
+}
 #pv-pricing {
     background: var(--clr-orange);
 }
 
-#pv-get-information h2 {
-    font-weight: 700;
-    font-size: 42px;
-    color: #505050;
+    #pv-pricing .col-md div h3 {
+        color: #505050;
+        font-size: 44px;
+        font-weight: 700
+    }
+
+    #pv-pricing .col-md div h4 {
+        color: #505050;
+        font-size: 25px;
+        font-weight: 700
+    }
+
+
+    #pv-pricing .col-md div h3 span {
+        font-size: 16px;
+    }
+
+    #pv-pricing .pv-pricing-description {
+        background: #fff;
+        border-radius: 30px;
+        padding: 30px;
+        position: relative;
+    }
+
+        #pv-pricing .pv-pricing-description p {
+            color: #505050
+        }
+
+        #pv-pricing .container {
+            position: relative;
+        }
+
+    #pv-pricing input[type="text"] {
+        max-width: 650px !important;
+        width: 600px;
+        border-radius: 12px;
+        border: none;
+        padding: 12px 30px;
+        margin: 0 16px;
+        text-align: center;
+    }
+
+button.btn-most-recommended-dnone {
+    visibility: hidden;
 }
+
+#pv-pricing .pv-phone-number-btn {
+    padding: 12px 60px;
+    margin: 0 6px;
+}
+
+        #pv-pricing input[type="text"]::placeholder {
+            color: #aaa;
+            text-align: center;
+            font-size: 20px;
+            font-weight: 500
+        }
+
+#pv-pricing img.thumb-up-icon {
+    position: absolute;
+    transform: translate(-100%, -100%) rotate(-10deg);
+    top: 35%;
+    left: 0
+}
+
+    #pv-pricing img.pv-pricing-check-icon {
+        position: absolute;
+        transform: translate(-100%, -100%) rotate(5deg) scale(0.8);
+        z-index: 999;
+        bottom: 18%;
+        right: -333px;
+    }
+
+    #pv-pricing h2 {
+        color: #fff;
+        font-size: 42px;
+        font-weight: 700
+    }
+
+    #pv-pricing p {
+        color: #fff
+    }
+
+        #pv-pricing .col-md div {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            margin: 30px 0;
+            height: 700px;
+        }
+
+    #pv-pricing .btn-most-recommended {
+        background: var(--clr-orange);
+        border: none;
+        color: #fff;
+        padding: 6px;
+        margin: 0 auto;
+        width: 70%
+    }
+
+    #pv-get-information h2 {
+        font-weight: 700;
+        font-size: 42px;
+        color: #505050;
+    }
 
 #pv-get-information h3 {    
     font-size: 26px;
@@ -607,6 +777,10 @@ nav #user-icon {
 }
 
 
+#pv-get-information {
+    background: #ededed
+}
+
 #pv-get-information img {
     width: 260px
 }
@@ -616,6 +790,11 @@ nav #user-icon {
     font-size: 42px;
     color: #505050;
 }
+
+    #pv-trusted-by-companies h2 {
+        font-size: 26px;
+        font-weight: 700;
+    }
 
 #pv-phone-validator h2 {
     font-size: 73px;
@@ -630,23 +809,16 @@ nav #user-icon {
 }
 #pv-advanced-pricing-list li {
     list-style-image: url(/images/orange-check-icon.png);
+    color: #fff
 }
 
 #pv-advanceddnc-pricing-list li, #pv-basic-pricing-list li, #pv-complete-pricing-list li {
     list-style-image: url(/images/green-check-icon.png);
+    color: #fff
 }
 
-.container.position-relative {
-    position: relative;
-}
-
-#ao-watch-videos .container {
-	position: relative
-}
-
-#ao-youtube-play-icon {
-	position: absolute;
-	right: 0 !important;
+#pv-pricing {
+    background: #373737;
 }
 
 #exampleModalCenter .modal-content {
@@ -661,8 +833,96 @@ nav #user-icon {
     border-bottom: none !important
 }
 
-@media (max-width: 576px) {
-    #people-search-api-hero h1 {
+
+#ao-brand-customers .container {
+    display: flex;
+}
+
+#ao-brand-customers span.brand-customers-orange {
+    font-size: 42px;
+    color: var(--clr-orange);
+    font-weight: 700;
+}
+
+#ao-brand-customers h2 {
+    font-size: 42px;
+    color: #373737;
+    font-weight: 700;
+}
+
+
+.owl-carousel img {
+    width: 120px !important;
+}
+.owl-carousel {
+    width: 70% !important
+}
+
+    .owl-carousel .owl-next {
+        right: 0;
+    }
+
+    .owl-carousel .owl-next, .owl-carousel .owl-prev {
+        position: absolute;
+        top: 50%;
+    }
+
+#ao-sb-adi {
+    position: relative;
+    height: 100vh
+}
+
+#sb-adi-laptop, #sb-adi-heading, #sb-adi-wave3, #sb-adi-wave4 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+    #sb-adi-laptop img {
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+    }
+
+
+div#sb-adi-heading {
+    z-index: 9;
+}
+
+
+div#sb-adi-wave3 {
+    z-index: 8;
+    top: 26%;
+    right: 46%;
+    opacity: 0.7;
+}
+
+div#sb-adi-laptop {
+    z-index: 7;
+}
+
+
+#ao-list #list-item-1, #ao-list #list-item-2, #ao-list #list-item-3, #ao-list #list-item-4, #ao-list #list-item-5 {
+    position: absolute;
+}
+
+#ao-list {
+    z-indez: 10
+}
+
+#ao-list-item-5 {
+    
+    font-size: 20px;
+    color: #000;
+    font-weight: 700;
+    border: 3px solid #fff;
+}
+
+
+
+    @media (max-width: 576px) {
+        #people-search-api-hero h1 {
         font-size: 26px;
         text-align: left
     }
@@ -707,16 +967,13 @@ nav #user-icon {
     #psa-find-phone-number img {
         top: 0%;
         width: 120px;
-        left: 86% !important;
-            position: absolute;
-    transform: translate(-50%, -50%) !important;
+        left: 86% !important
     }
 
     .psa-cta {
         display: none
     }
-
-    
+         
 }
 
 @media (max-width: 991px) {
@@ -728,3 +985,8 @@ nav #user-icon {
         flex-direction: column;
     }
 }
+
+
+
+
+
