--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -119,7 +119,7 @@
 
 
 #people-search-api-hero {
-    background: url("/images/psabg.png") no-repeat bottom;
+    background: url("https://dilsondecano.github.io/people-search-api/images/psabg.png") no-repeat bottom;
     background-size: cover
 }
 
@@ -216,7 +216,7 @@ nav #user-icon {
 
 
 #psa-faq ul li {
-    list-style-image: url('/images/arrow-icon.png');
+    list-style-image: url('https://dilsondecano.github.io/people-search-api/images/arrow-icon.png');
     margin: 12px 0
 }
 
@@ -808,12 +808,12 @@ button.btn-most-recommended-dnone {
     font-weight: 700;
 }
 #pv-advanced-pricing-list li {
-    list-style-image: url(/images/orange-check-icon.png);
+    list-style-image: url(https://dilsondecano.github.io/people-search-api/images/orange-check-icon.png);
     color: #fff
 }
 
 #pv-advanceddnc-pricing-list li, #pv-basic-pricing-list li, #pv-complete-pricing-list li {
-    list-style-image: url(/images/green-check-icon.png);
+    list-style-image: url(https://dilsondecano.github.io/people-search-api/images/green-check-icon.png);
     color: #fff
 }
 
