--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -20,6 +20,18 @@
     padding: 0 8%;
 }
 
+.orange-border-1 {
+    background: #fff;
+    border-radius: 16px;
+    border: 2px solid var(--clr-orange);
+}
+
+.orange-border-2 {
+    background: #fff;
+    border-radius: 16px;
+    border: 2px solid var(--clr-orange);
+    padding: 40px;
+}
 
 .background-light {
     background: var(--clr-light);
@@ -119,7 +131,7 @@
 
 
 #people-search-api-hero {
-    background: url("https://dilsondecano.github.io/people-search-api/images/psabg.png") no-repeat bottom;
+    background: url("/images/psabg.png") no-repeat bottom;
     background-size: cover
 }
 
@@ -216,7 +228,7 @@ nav #user-icon {
 
 
 #psa-faq ul li {
-    list-style-image: url('https://dilsondecano.github.io/people-search-api/images/arrow-icon.png');
+    list-style-image: url('/images/arrow-icon.png');
     margin: 12px 0
 }
 
@@ -808,12 +820,12 @@ button.btn-most-recommended-dnone {
     font-weight: 700;
 }
 #pv-advanced-pricing-list li {
-    list-style-image: url(https://dilsondecano.github.io/people-search-api/images/orange-check-icon.png);
+    list-style-image: url(/images/orange-check-icon.png);
     color: #fff
 }
 
 #pv-advanceddnc-pricing-list li, #pv-basic-pricing-list li, #pv-complete-pricing-list li {
-    list-style-image: url(https://dilsondecano.github.io/people-search-api/images/green-check-icon.png);
+    list-style-image: url(/images/green-check-icon.png);
     color: #fff
 }
 
@@ -908,7 +920,7 @@ div#sb-adi-laptop {
 }
 
 #ao-list {
-    z-indez: 10
+    z-index: 10
 }
 
 #ao-list-item-5 {
@@ -919,10 +931,269 @@ div#sb-adi-laptop {
     border: 3px solid #fff;
 }
 
+#afva-hero #afva-hero-magnifying-glass {
+    transform: rotate(20deg) scaleX(-1)
+}
 
 
-    @media (max-width: 576px) {
-        #people-search-api-hero h1 {
+#afva-hero #afva-hero-phone {
+    margin-top: -100px;
+}
+
+
+
+#afva-hero h1 {
+    font-size: 42px;
+    font-weight: bold;
+    color: var(--clr-orange);
+}
+
+#afva-hero h2 {
+    font-size: 73px;
+    font-weight: bold;
+    color: #373737;
+}
+
+
+
+.container.afva-cta > div {
+    background: #fff;
+    border-radius: 16px;
+    border: 2px solid var(--clr-orange);
+    padding: 20px 10px;
+}
+
+.container.afva-cta h2 {
+    color: var(--clr-orange);
+    font-size: 26px !important;
+    font-weight: 700
+}
+
+#afva-cta {
+    background: #ededed
+}
+
+.container.afva-cta h3 {
+    font-size: 34px !important;
+    font-weight: 700
+}
+
+.graybg-border-radius-16
+{
+    background: var(--clr-gray);
+    border-radius: 16px
+}
+
+#afva-identify-phone-num h2 {
+    font-weight: 700;
+    font-size: 26px;
+    color: #505050
+}
+
+
+#afva-identify-phone-num p {
+    font-size: 20px;
+    color: #505050;
+}
+
+#phone-validator-table {
+    font-size: 15px;
+}
+
+    #phone-validator-table button {
+        font-size: 14px;
+        text-wrap: nowrap;
+        background: var(--clr-orange);
+        color: #fff;
+        border: none;
+    }
+
+#afva-cpra .col.afva-input-radio, #afva-cpra .afva-api-type h3, #afva-cpra #afva-records-per-month {
+    font-size: 20px;
+    color: #505050;
+    font-weight: 700
+}
+
+#afva-cpra input[type = "radio"]:checked + label {
+    color: orange;
+}
+
+#afva-cpra .col.afva-input-radio {
+    padding: 12px 36px;
+}
+
+#afva-cpra h2 {
+    font-size: 42px;
+    font-weight: 700;
+    text-align: center;
+    color: var(--clr-orange);
+}
+
+#afva-cpra .container > h3 {
+    font-size: 26px;
+    font-weight: 700;
+    text-align: center;
+    color: #505050;
+    margin-top: 40px
+}
+
+#afva-records-per-month input[type="text"] {
+    width: 700px;
+    max-width: 600px;
+    border-radius: 16px;
+    border: solid 2px #505050;
+    padding: 10px 30px;
+    margin: 0 30px;
+}
+
+#afva-cpra table {
+    margin: 60px 0;
+    
+}
+
+#afva-cpra th {
+    background: var(--clr-orange);
+    color: #fff;
+    font-weight: 700;
+    padding: 12px;
+    text-align: center;
+    border-radius: 16px 16px 0 0;
+}
+
+#afva-cpra td {
+    background: #ededed;
+    color: #6f6f6f;
+    font-weight: 700;
+    padding: 12px;
+    border-radius: 0 0 16px 16px;
+    font-size: 20px;
+    text-align: center;
+}
+
+
+#phone-validator-table .table thead th {
+    text-align: center;
+}
+
+.tableth-price-factor {
+    background: #FFE9CA;
+    color: var(--clr-orange)
+}
+
+#phone-validator-table .table td, .table th {
+    padding: .65rem !important;
+}
+
+#phone-validator-table .table td div {
+    text-align: center
+    }
+
+.price-factor-no-wrap {
+    text-wrap: nowrap
+}
+
+.tableth-bground {
+    background: #ededed
+}
+
+#phone-validator-table th {
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid white;
+}
+
+#phone-validator-table td {
+    border: 1px solid #fff;
+}
+
+#afva-faq {
+    background: #FDF5E7
+}
+
+    #afva-faq li {
+        margin-top: 12px;
+        list-style-image: url(/images/arrow-icon.png);
+    }
+
+#afva-carousel {
+    background: #ededed;
+}
+
+    #afva-carousel h2 {
+        color: #505050;
+        font-size: 26px;
+        font-weight: 700;
+        text-wrap: nowrap
+    }
+
+    #afva-carousel button {
+        
+        font-size: 16px;
+        font-weight: 700;
+        border: none;
+        background: none;
+        color: var(--clr-orange)
+    }
+
+    #afva-carousel .col div {
+        background: white;
+        padding: 24px;
+        border-radius: 16px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
+    }
+
+
+#afva-cpra .row > * {
+    padding-right: calc(var(--bs-gutter-x)* 0.1);
+    padding-left: calc(var(--bs-gutter-x)* 0.1);
+}
+
+#afva-dnc-list {
+    background: #fdf5e7
+}
+
+#afva-dnc-list p {
+    color: #373737;
+    font-size: 20px;
+}
+
+#afva-dnc-list #afva-dnc-list-map {
+    position: relative
+}
+
+
+    #afva-dnc-list h2 {
+        color: #373737;
+        font-size: 25px;
+        font-weight: 700;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+
+#afva-dnc-list div {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+#afva-estimate-cost-verify-data h2 {
+    color: #505050;
+    font-size: 42px;
+    font-weight: 700;
+}
+
+    #afva-estimate-cost-verify-data h2 span {
+        color: var(--clr-orange);
+    }
+
+#afva-estimate-cost-verify-data h3 {
+    color: #505050;
+    font-size: 26px;
+    
+}
+@media (max-width: 576px) {
+    #people-search-api-hero h1 {
         font-size: 26px;
         text-align: left
     }
