--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -1198,9 +1198,20 @@ th.apva-pvt-border {
     background: #ededed;
 }
 
+    #apva-carousel .apva-carousel-card {
+        background: white;
+        border-radius: 16px;
+        margin: 5px 13px;
+        padding: 16px 16px;
+    }
+
+#apva-carousel .owl-dots {
+    display: none;
+}
+
     #apva-carousel h2 {
         color: #505050;
-        font-size: 23px;
+        font-size: 21px;
         font-weight: 700;
         text-wrap: nowrap
     }
@@ -1223,6 +1234,27 @@ th.apva-pvt-border {
         flex-direction: column;
         align-items: baseline;
     }
+
+.owl-carousel .owl-next, .owl-carousel .owl-prev {
+    position: absolute;
+    top: 25%;
+    
+}
+
+    .owl-carousel .owl-next span, .owl-carousel .owl-prev span {
+        font-size: 40px;
+        color: var(--clr-orange);
+    }
+
+
+
+.owl-carousel .owl-next {
+    right: -25px;
+}
+
+.owl-carousel .owl-prev {
+    left: 0;
+}
 
     
 
